initial docs and migrate to github discussions for feedback

--- a/docs/src/pages/docs/index.mdx
+++ b/docs/src/pages/docs/index.mdx
@@ -1,1 +1,52 @@
 # Toppings
+
+## 📖 How To Use
+
+Congratulations on installing Toppings! Get ready to experience effortless browsing with our convenient features. No manual setup required – everything is preconfigured and starts working automatically once you install the extension.
+
+### Contents
+
+- [Pinning to toolbar](#pinning)
+- [Opening popup](#opening-popup)
+- [Opening settings](#opening-settings)
+- [Customize the settings](#setting-up)
+
+### Pinning to toolbar
+
+Click on the puzzle icon in the top right corner of the browser and pin Toppings to the toolbar so it's always at hand.
+
+### Opening popup
+
+Click on the Toppings icon in the toolbar to open the popup.
+
+### Opening settings
+
+Click on the gear icon in the bottom left corner of the popup to open the settings.
+
+### Customize the settings
+
+The following settings page will open where you can explore and modify the settings to meet your requirements. Don't forget to save your changes by clicking on the "Save" button at the bottom of the page. If you ever want to revert to the default settings, click the "Restore Default" button next to the "Save" button.
+
+Let's dive into the customization options available in Toppings! Explore the following sections to adjust and personalize your video-watching experience to perfection:
+
+### Shortcuts Section:
+
+- **Toggle Speed:** Use the default 'S' key to toggle the playback speed.
+- **Seek Forward:** Press the 'X' key to skip forward in the video.
+- **Seek Backward:** Press the 'Z' key to rewind the video.
+
+### YouTube Watch Section:
+
+- **Set Custom Playback Speed:** Easily adjust the playback speed using the custom speed list.
+- **Set Custom Toggle Speed:** The default toggle speed is 2x, but you can change it to your preference.
+- **Set Default Playback Speed:** Choose your preferred default playback speed (default is 1x).
+- **Set Seek Backward Shortcut Duration:** Customize the duration (default is 10 seconds) for the seek backward shortcut.
+- **Set Seek Forward Shortcut Duration:** Customize the duration (default is 10 seconds) for the seek forward shortcut.
+
+### YouTube Playlist Section:
+
+- **Enable/Disable Playlist Runtime Duration:** Choose whether to display the runtime duration of the playlist.
+
+### 📬 Need help?
+
+If you have any issues, queries, or need assistance, please feel free to [submit a bug report, provide feedback, or request a new feature](https://github.com/enrych/toppings/discussions/new?category=feedback&title=Feedback:&body=Please%20provide%20your%20feedback%20here). Your input helps us improve Toppings and provide you with an even better browsing experience.
