--- a/docs/src/pages/docs/index.mdx
+++ b/docs/src/pages/docs/index.mdx
@@ -2,14 +2,16 @@
 
 ## 📖 How To Use
 
-Congratulations on installing Toppings! Get ready to experience effortless browsing with our convenient features. No manual setup required – everything is preconfigured and starts working automatically once you install the extension.
+Congratulations on installing Toppings! Get ready to experience effortless browsing with our convenient features. No manual setup is required – everything is preconfigured and starts working automatically once you install the extension.
 
 ### Contents
 
 - [Pinning to toolbar](#pinning)
 - [Opening popup](#opening-popup)
 - [Opening settings](#opening-settings)
-- [Customize the settings](#setting-up)
+- [Customize the settings](#customize-the-settings)
+- [Shortcuts](#shortcuts-section)
+- [Looping Video Segments](#looping-video-segments-new-in-v220)
 
 ### Pinning to toolbar
 
@@ -25,28 +27,41 @@ Click on the gear icon in the bottom left corner of the popup to open the settin
 
 ### Customize the settings
 
-The following settings page will open where you can explore and modify the settings to meet your requirements. Don't forget to save your changes by clicking on the "Save" button at the bottom of the page. If you ever want to revert to the default settings, click the "Restore Default" button next to the "Save" button.
+The settings page will open, allowing you to explore and modify settings according to your needs. Changes are saved automatically as you make them, so there's no need to manually save. Please note that the "Restore Default" button is not currently available.
 
-Let's dive into the customization options available in Toppings! Explore the following sections to adjust and personalize your video-watching experience to perfection:
+Dive into Toppings' customization options and personalize your video-watching experience!
 
-### Shortcuts Section:
+### Shortcuts Section
 
-- **Toggle Speed:** Use the default 'S' key to toggle the playback speed.
-- **Seek Forward:** Press the 'X' key to skip forward in the video.
-- **Seek Backward:** Press the 'Z' key to rewind the video.
+- **Toggle Speed:** Press the default 'X' key to toggle playback speed.
+- **Increase Playback Speed:** Press the default 'W' key to increase playback speed.
+- **Decrease Playback Speed:** Press the default 'S' key to decrease playback speed.
+- **Seek Forward:** Press the default 'D' key to skip forward in the video.
+- **Seek Backward:** Press the default 'A' key to rewind in the video.
+- **Toggle Loop Segment:** Press the default 'Z' key to set and toggle loop segment markers.
 
-### YouTube Watch Section:
+### YouTube Watch Section
 
-- **Set Custom Playback Speed:** Easily adjust the playback speed using the custom speed list.
-- **Set Custom Toggle Speed:** The default toggle speed is 2x, but you can change it to your preference.
-- **Set Default Playback Speed:** Choose your preferred default playback speed (default is 1x).
-- **Set Seek Backward Shortcut Duration:** Customize the duration (default is 10 seconds) for the seek backward shortcut.
-- **Set Seek Forward Shortcut Duration:** Customize the duration (default is 10 seconds) for the seek forward shortcut.
+- **Set Custom Playback Speed:** Adjust the playback speed using the custom speed list.
+- **Set Custom Toggle Speed:** The default toggle speed is 2x, but this can be changed.
+- **Set Default Playback Speed:** Set your preferred default playback speed (1x by default).
+- **Set Seek Backward Shortcut Duration:** Customize the duration (default 10 seconds) for the seek backward shortcut.
+- **Set Seek Forward Shortcut Duration:** Customize the duration (default 10 seconds) for the seek forward shortcut.
 
-### YouTube Playlist Section:
+### YouTube Playlist Section
 
-- **Enable/Disable Playlist Runtime Duration:** Choose whether to display the runtime duration of the playlist.
+- **Enable/Disable Playlist Runtime Duration:** Optionally display the total runtime duration of the playlist.
+
+### Looping Video Segments (New in v2.2.0)
+
+We’re excited to announce the addition of a powerful new feature in Toppings v2.2.0 – the ability to **loop specific segments** of YouTube videos! Whether you're practicing dance moves, learning an instrument, or simply repeating your favorite moments, you can now loop portions of a video effortlessly. 😊🎶
+
+To use this feature:
+- Start by pressing the **'Z' key** to set loop markers at your desired start and end points in the video.
+- Press **'Z'** again to toggle the loop on and off.
+
+This makes it easy to focus on specific parts of the video without needing to constantly rewind or fast-forward. Enjoy mastering your content with precise control!
 
 ### 📬 Need help?
 
-If you have any issues, queries, or need assistance, please feel free to [submit a bug report, provide feedback, or request a new feature](https://github.com/enrych/toppings/discussions/new?category=feedback&title=Feedback:&body=Please%20provide%20your%20feedback%20here). Your input helps us improve Toppings and provide you with an even better browsing experience.
+If you encounter any issues, have questions, or want to provide feedback or request new features, please feel free to [submit a bug report, provide feedback, or request a new feature](https://github.com/enrych/toppings/discussions/new?category=feedback&title=Feedback:&body=Please%20provide%20your%20feedback%20here). Your input helps us improve Toppings and provide a better browsing experience.
